css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;1,100;1,200;1,300&family=Sacramento&display=swap');
/*HEADER STYLES*/
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: montserrat;
    color: black;
    text-decoration: none;
}

.turnero{
    width: 40px;
    height: 40px;
    overflow: hidden;
    position: fixed;
    top: 35px;
    left: 10px;
    background-color: #320E3B;
    padding: 5px;
    font-size: 20px;
    border: #C0D6DF solid 2px;
    border-top-right-radius: 15px ;
    border-bottom-left-radius: 15px;
    box-shadow: 1px 1px 2px black;
    z-index: 2;
}

a{
    text-decoration: none;
    color: black;
}

.turnero a{
    line-height: 15px;
}

.turnero:hover{
    border: double white 2px;
    box-shadow: -1px -1px 2px black;
}

a{
    text-decoration: none;
}

.topHeader{
    font-size: 1.1rem;
    background-color: #C0D6DF;
}

#info, #redes{
    display: inline-block;
    width: auto;
}

.topHeader i:hover, .topHeader span:hover{
    color: white!important;
}

.logo a{
    font-family: sacramento;
    font-size: 3rem;
    margin-left: -20px;
    color: #C0D6DF;
    text-shadow: 1px 1px 2px black;
}

.navbar{
    z-index: 1!important;
    position: sticky;
    top: 30px;
    margin-top: -90px;
}

.navbar-toggler{
    width: 40px;
    background-color: #FFA5AB;
    border: white solid 2px !important;
    box-shadow: 2px 2px 10px 3px black;
    margin-bottom: 5px;
}
.navbar-toggler-icon{
    margin-left: -8px;
}

.navbar a:hover{
    text-decoration: underline black;
}

.navbar li a{
    line-height: 15px;
    width: 100px;
    text-align: end;
    background-color: rgba(255, 255, 255, 0.8);
    border-radius: 3px;
    z-index: 2;
}

footer{
    background-color: #320E3B;
    color: aliceblue;
    box-shadow:inset 0px 10px 10px 40px white;
    padding: 70px;
}

footer li a{
    color: white;
}

/*INDEX STYLES*/
    /*FIRST SECTION INDEX*/
html{
    scroll-behavior: smooth;
}

.firstSection{
    background-image: url(../media/images/backgroundImage.jpg);
    background-size: cover;
    background-attachment: fixed;
    background-position: right;
    background-color: white;
    width: 100%;
    margin-top: -20px;
    min-height: 500px;
    box-shadow:inset 0px 10px 10px 40px white;
    padding: 50px;
    display: flex;
    align-items: center;
    flex-flow: column;
}

.firstSection__media{
    width: 130%;
    border: #FFA5AB solid 2px;
    border-radius: 5px;
    overflow: hidden;
    display: flex;
    align-items: center;
}

.firstSection__media--video{
    width: 100%;
}

.firstSection__person{
    width: 100%;
    margin-top: 20px;
    margin-bottom: -15px;
    order: 3;
}

.firstSection__description{
    display: inline-block;
    width: 100%;
    min-height: 150px;
    overflow: hidden;
    text-align: center;
    background-color: rgba(220, 214, 247, .3);
    border-radius: 10px;
    display: flex;
    align-items: center;
    margin-top: 20px;
}

.secondSection{
    margin-top: -20px;
    background-color: #C0D6DF;
    width: 100%;
    min-height: 400px;
    box-shadow:inset 0px 10px 10px 40px white;
    display: flex;
    flex-flow: column wrap;
    justify-content: space-around;
    align-items: center;
}

.secondSection__boxes{
    width: 90%;
    height: 280px;
    background-color: #FFA5AB;
    border: white solid 2px;
    border-radius: 10px;
    text-align: center;
    box-shadow:inset 0px 0px 10px 4px white;
    margin-top: 20px;
}

.coments:hover{
    border: solid black 2px;
    box-shadow:inset 0px 0px 7px 3px white;
}

.sections{
    width: 100%;
    height: auto;
    background-color: #C0D6DF;
    box-shadow:inset 0px 10px 10px 40px white;
    padding: 70px;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-content: center;
}

.services ul{
    list-style: none;
}

.titulos{
    font-family: sacramento;
    font-size: 70px;
    color: #FFA5AB;
    text-shadow: 3px 3px 5px black;
    text-align: center;
    margin-bottom: -90px;
}

.galeriaEspecializaciones{
    height: 300px;
    width: 100%;
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    align-content: center;
}

.galeriaFotos{
    display: inline-block;
    background-color: aqua;
    width: 250px;
    height: 120px;
    margin-top: 20px;
}

.servicesBoxes
{
    width: 100%;
    text-align: center;
}

.ubicationMap{
    width: 100%;
    height: 300px;
    overflow: hidden;
    border: solid 2px #FFA5AB;
}

.obrasSociales{
    height: 500px;
}

.sobreMi__article{
    display: flex;
    flex-flow: column nowrap;
    justify-content: space-evenly;
    align-items: center;
}

.sobreMi__secondArticle{
    width: 100%;
    background-color: #FFA5AB;
    border: white solid 2px;
    border-radius: 10px;
    text-align: center;
    box-shadow:inset 0px 0px 10px 2px white;
    margin-top: 20px;
}

.sobreMi__secondArticle a{
    color: #C0D6DF;
    text-shadow: 1px 1px 2px black;
}

.sobreMi__secondArticle a:hover{
    color: white;
    text-shadow: 1px 1px 2px black;
    border-bottom: solid black 2px;
}

.subir{
    height: 50px;
    width: 50px;
    background-color: #FFA5AB;
    border: white solid 2px;
    position: fixed;
    bottom: 40px;
    right: 40px;
    text-align: center;
    line-height: 50px;
    font-size: 25px;
    border-radius: 50%;
    box-shadow: 2px 2px 10px 3px black;
    transition: all 0.5s ease-in-out;
}

.subir:hover{
    border: black solid 2px;
    box-shadow: 2px 2px 10px 3px white;
    cursor: pointer;
    transform: scale(1.1);
}

/*Styles Galeria*/

.contenedorFotos{
    width: 100%;
    height: auto;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: repeat(8, auto);
    grid-gap: 10px;
    box-shadow:inset 0px 10px 10px 40px white;
    background-color: #C0D6DF;
    padding: 50px;
    padding-top: 100px;
}
/* ... */

